remove nigerian company logos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- set the page title -->
-	<title>Vuma Invest - Invets in US and Kenya Stock</title>
+	<title>VumaInvest - Invets in US and Kenya Stock</title>
 	<!-- inlcude google cabin font cdn link -->
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/png" href="images/favicon.png" />
@@ -32,7 +32,7 @@
 								<!-- logo -->
 								<div class="logo mt-1">
 									<a href="javascript:void(0);">
-										<img src="images/logo.svg" class="" alt="Vuma Invest">
+										<img src="images/logo.svg" class="" alt="VumaInvest">
 									</a>
 								</div>
 							</div>
@@ -89,10 +89,10 @@
 								<div class="col-12 col-md-6">
 									<div class="captionWrap position-relative">
 										<div class="wow fadeInUp" data-wow-delay="0.5s">
-											<h1 class="text-white font-weight-bold mb-5">Buy and sell Kenya and U.S. stocks</h1>
+											<h1 class="text-white font-weight-bold mb-5">Buy and sell U.S. stocks</h1>
 										</div>
 										<div class="wow fadeInUp" data-wow-delay="1s">
-											<p>unrestricted access to over 3,000 stocks listed on the Kenya stock exchange and U.S. stock exchanges, right from your mobile phone or computer.</p>
+											<p>Unrestricted access to over 3,000 stocks listed on the Kenya stock exchange and U.S. stock exchanges, right from your mobile phone or computer.</p>
 										</div>
 										<div class="wow fadeInUp mt-5" data-wow-delay="1.5s">
 											<a href="javascript:void(0);" class="align-top mt-6 p-0 border-0 position-relative">
@@ -139,20 +139,6 @@
 							<div>
 								<!-- logoWrap -->
 								<div class="logoWrap">
-									<img src="images/Zenith.png" class="img-fluid" alt="Zenith">
-								</div>
-							</div>
-							<!-- slide -->
-							<div>
-								<!-- logoWrap -->
-								<div class="logoWrap">
-									<img src="images/Access.png" class="img-fluid" alt="access">
-								</div>
-							</div>
-							<!-- slide -->
-							<div>
-								<!-- logoWrap -->
-								<div class="logoWrap">
 									<img src="images/disney.png" class="img-fluid" alt="Walt Disney">
 								</div>
 							</div>
@@ -161,13 +147,6 @@
 								<!-- logoWrap -->
 								<div class="logoWrap">
 									<img src="images/amazon.png" class="img-fluid" alt="Amazon">
-								</div>
-							</div>
-							<!-- slide -->
-							<div>
-								<!-- logoWrap -->
-								<div class="logoWrap">
-									<img src="images/GTbank.png" class="img-fluid" alt="GT Bank">
 								</div>
 							</div>
 							<!-- slide -->
@@ -197,7 +176,7 @@
 								<!-- headingHead -->
 								<header class="headingHead textMedium text-center mb-8 mb-lg-10 mb-xl-14 wow bounceInUp">
 									<h2 class="mb-5">Embrace Micro Investing</h2>
-									<p>Can't afford to buy 1 share of your favourite company? No problem, Vuma Invest lets you invest in bits through fractional investing.</p>
+									<p>Can't afford to buy 1 share of your favourite company? No problem, VumaInvest lets you invest in bits through fractional investing.</p>
 								</header>
 							</div>
 						</div>
@@ -213,7 +192,7 @@
 									<h3 class="h6 fontBase font-weight-normal mb-2">
 										<a href="javascript:void(0);">Register in Minutes</a>
 									</h3>
-									<p>Access Vuma Invest Download the "Vuma Invest" App on Google Play or the App store.</p>
+									<p>Access VumaInvest Download the "VumaInvest" App on Google Play or the App store.</p>
 								</article>
 							</div>
 							<div class="col-12 col-sm-6 col-lg-3 d-flex wow flipInX" data-wow-delay="0.5s">
@@ -227,7 +206,7 @@
 									<h3 class="h6 fontBase font-weight-normal mb-2">
 										<a href="javascript:void(0);">Low Entry Point</a>
 									</h3>
-									<p>With as little as $10 or ₦1,000 get exposure to Nigerian Stocks, Foreign Stocks, Bonds, ETFs & more.</p>
+									<p>With as little as $1 or KSh1,000 get exposure to Kenyan Stocks, Foreign Stocks, Bonds, ETFs & more.</p>
 								</article>
 							</div>
 							<div class="col-12 col-sm-6 col-lg-3 d-flex wow flipInX" data-wow-delay="0.5s">
@@ -241,7 +220,7 @@
 									<h3 class="h6 fontBase font-weight-normal mb-2">
 										<a href="javascript:void(0);">Intelligent Investing</a>
 									</h3>
-									<p>Vuma Invest is more than an investment app. You'll have access to tools that would help you become a savvy investor.</p>
+									<p>VumaInvest is more than an investment app. You'll have access to tools that would help you become a savvy investor.</p>
 								</article>
 							</div>
 							<div class="col-12 col-sm-6 col-lg-3 d-flex wow flipInX" data-wow-delay="0.5s">
@@ -255,7 +234,7 @@
 									<h3 class="h6 fontBase font-weight-normal mb-2">
 										<a href="javascript:void(0);">Easy to use App</a>
 									</h3>
-									<p>User friendly app with the intutive design with easy tracking of your assets and portfolio.</p>
+									<p>User friendly app, intutive design with easy tracking of your assets and portfolio.</p>
 								</article>
 							</div>
 						</div>
@@ -308,8 +287,8 @@
 						<div class="col-12 col-lg-10 offset-lg-1 col-xl-6 offset-xl-3">
 							<!-- headingHead -->
 							<header class="headingHead textMedium text-center mb-8 mb-lg-15 wow bounceInUp">
-								<h1 class="mb-5">Why Vuma Invest</h1>
-								<p>Trusted and secure in Kenya and easy to use</p>
+								<h1 class="mb-5">Why VumaInvest</h1>
+								<p>Trusted, secure and easy to use</p>
 							</header>
 						</div>
 					</div>
@@ -353,7 +332,7 @@
 										<!-- titleWrap -->
 										<header class="titleWrap">
 											<h3 class="mb-5">Invest</h3>
-											<p>Fund your ₦ & $ balance almost instantly and start buying and selling shares in just a few taps. You can also diversify your holdings by buying into a bundle of stocks (called an ETF).</p>
+											<p>Fund your $ & KSh balance almost instantly and start buying and selling shares in just a few taps. You can also diversify your holdings by buying into a bundle of stocks (called an ETF).</p>
 										</header>
 									</div>
 								</div>
@@ -375,7 +354,7 @@
 										<!-- titleWrap -->
 										<header class="titleWrap">
 											<h3 class="mb-5">Track</h3>
-											<p>Intuitively designed for newcomers and experts alike, Vuma Invest gives you a clear picture of your portfolio’s performance over time, so you can adjust your positions and learn by doing.</p>
+											<p>Intuitively designed for newcomers and experts alike, VumaInvest gives you a clear picture of your portfolio’s performance over time, so you can adjust your positions and learn by doing.</p>
 										</header>
 									</div>
 								</div>
@@ -504,7 +483,7 @@
 								<!-- headingHead -->
 								<header class="headingHead textMedium text-center mb-8 mb-md-11 mb-lg-15 wow bounceInUp">
 									<h2 class="mb-2">FAQ</h2>
-									<p>A list of frequently asked questions to help you to give answer for your questions on your mind.</p>
+									<p>A list of frequently asked questions to help give answers to questions on your mind.</p>
 								</header>
 							</div>
 						</div>
@@ -522,7 +501,7 @@
 										<div id="collapse1" class="collapse" data-parent="#faqAccodion">
 											<!-- accSlideWrap -->
 											<div class="accSlideWrap overflow-hidden px-3 px-md-5 pt-4 pb-2">
-												<p>Vuma Invest supports fractional investing for trading the U.S Stock market. This means you can buy parts of any stock based on how much you want to invest</p>
+												<p>VumaInvest supports fractional investing for trading the U.S Stock market. This means you can buy parts of any stock based on how much you want to invest</p>
 											</div>
 										</div>
 									</div>
@@ -530,12 +509,12 @@
 									<div class="faqItem mb-4 wow flipInX">
 										<!-- accOpener -->
 										<div class="accOpener collapsed fwMedium fontAlter position-relative" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" role="button" aria-controls="collapse2">
-											<h3 class="mb-0">How does the interest on my Vuma Invest wallet work?</h3>
+											<h3 class="mb-0">How does the interest on my VumaInvest wallet work?</h3>
 										</div>
 										<div id="collapse2" class="collapse" data-parent="#faqAccodion">
 											<!-- accSlideWrap -->
 											<div class="accSlideWrap overflow-hidden px-3 px-md-5 pt-4 pb-2">
-												<p>Cash left uninvested in your Bamboo wallet will earn around 0.05% per annum in interest. It is an even better way to protect your money from inflation and devaluation because the interest rate on Bamboo is higher than the interest rates across Nigerian domiciliary accounts.</p>
+												<p>Cash left uninvested in your VumaInvest wallet will earn around 0.05% per annum in interest. It is an even better way to protect your money from inflation and devaluation because the interest rate on VumaInvest is higher than the interest rates across Kenyan domiciliary accounts.</p>
 											</div>
 										</div>
 									</div>
@@ -548,7 +527,7 @@
 										<div id="collapse3" class="collapse" data-parent="#faqAccodion">
 											<!-- accSlideWrap -->
 											<div class="accSlideWrap overflow-hidden px-3 px-md-5 pt-4 pb-2">
-												<p>The US stock exchanges open at 2:30 pm (Kenya time) and close at 9 pm (Kenya time) on weekdays.</p>
+												<p>The US stock exchange opens at 2:30 pm (Kenya time) and closes at 9 pm (Kenya time) on weekdays.</p>
 											</div>
 										</div>
 									</div>
@@ -559,7 +538,7 @@
 									<div class="faqItem mb-4 wow flipInX">
 										<!-- accOpener -->
 										<div class="accOpener collapsed fwMedium fontAlter position-relative" data-toggle="collapse" data-target="#collapse6" aria-expanded="false" role="button" aria-controls="collapse6">
-											<h3 class="mb-0">How secure is my Vuma Invest account?</h3>
+											<h3 class="mb-0">How secure is my VumaInvest account?</h3>
 										</div>
 										<div id="collapse6" class="collapse" data-parent="#faqAccodion">
 											<!-- accSlideWrap -->
@@ -568,7 +547,7 @@
 
 													We're backed by top financial market operators and we not only meet traditional banking security standards, but we also exceed them. That's how much it matters to us.<br/>
 
-													The Securities Investor Protection Corporation insures your Vuma Invest account up to $500,000 and wallet balances on Vuma Invest are Federal Deposit Insurance Corporation (FDIC) insured.</p>
+													The Securities Investor Protection Corporation insures your VumaInvest account up to $500,000 and wallet balances on VumaInvest are Federal Deposit Insurance Corporation (FDIC) insured.</p>
 											</div>
 										</div>
 									</div>
@@ -576,12 +555,12 @@
 									<div class="faqItem mb-4 wow flipInX">
 										<!-- accOpener -->
 										<div class="accOpener collapsed fwMedium fontAlter position-relative" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" role="button" aria-controls="collapse4">
-											<h3 class="mb-0">How long can I hold my investments with Vuma Invest?</h3>
+											<h3 class="mb-0">How long can I hold my investments with VumaInvest?</h3>
 										</div>
 										<div id="collapse4" class="collapse" data-parent="#faqAccodion">
 											<!-- accSlideWrap -->
 											<div class="accSlideWrap overflow-hidden px-3 px-md-5 pt-4 pb-2">
-												<p>You can hold on to your US assets on Vuma Invest for as long as you want. You can sell off your stocks on Vuma Invest anytime you decide to.</p>
+												<p>You can hold on to your US assets on VumaInvest for as long as you want. You can sell off your stocks on VumaInvest anytime you decide to.</p>
 											</div>
 										</div>
 									</div>
@@ -589,12 +568,12 @@
 									<div class="faqItem mb-4 wow flipInX">
 										<!-- accOpener -->
 										<div class="accOpener collapsed fwMedium fontAlter position-relative" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" role="button" aria-controls="collapse5">
-											<h3 class="mb-0">Why Does Vuma Invest Need My BVN?</h3>
+											<h3 class="mb-0">Why Does VumaInvest Need My BVN?</h3>
 										</div>
 										<div id="collapse5" class="collapse" data-parent="#faqAccodion">
 											<!-- accSlideWrap -->
 											<div class="accSlideWrap overflow-hidden px-3 px-md-5 pt-4 pb-2">
-												<p>Vuma Invest is committed to upholding the highest standards of security. For regulatory purposes we must verify all users before opening their Vuma Invest accounts. We need your BVN to verify that you are who you say you are. Vuma Invest does not share your BVN with any third party entity nor do we use the information on your BVN for anything other than identity verification. </p>
+												<p>VumaInvest is committed to upholding the highest standards of security. For regulatory purposes we must verify all users before opening their VumaInvest accounts. We need your BVN to verify that you are who you say you are. VumaInvest does not share your BVN with any third party entity nor do we use the information on your BVN for anything other than identity verification. </p>
 											</div>
 										</div>
 									</div>
@@ -612,7 +591,7 @@
 							<div class="row">
 								<div class="col-12 col-md-10 offset-md-1 mt-6
 								 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3 wow wobble">
-									<h1 class="h1Medium fontBase font-weight-normal mb-4">Download the app and start your investing journey now.</h1>
+									<h1 class="h1Medium fontBase font-weight-normal mb-4">Download the app and start your investment journey now.</h1>
 									<a href="javascript:void(0);" class="align-top mt-6 mt-lg-7 p-0 border-0 position-relative" data-hover="Try it for Free">
 										<img src="images/download-app-store.svg" alt=""/>
 									</a>
@@ -667,7 +646,7 @@
 							<h3 class="h6 text-white mb-4">Resources</h3>
 							<!-- ftScribeForm -->
 							<form action="#" class="ftScribeForm">
-								<strong class="d-block font-weight-normal mb-6">The latest Vumainvest news, articles, and resources sent straight to your inbox every month.</strong>
+								<strong class="d-block font-weight-normal mb-6">The latest VumaInvest news, articles, and resources sent straight to your inbox every month.</strong>
 								<div class="input-group">
 									<input type="email" class="form-control" placeholder="Your Email">
 									<div class="input-group-append">
@@ -682,7 +661,7 @@
 							<!-- ftLogo -->
 							<div class="ftLogo mb-6 mx-auto mx-md-0">
 								<a href="javascript:void(0);">
-									<img src="images/logo.svg" class="img-fluid" alt="Vuma Invest">
+									<img src="images/logo.svg" class="img-fluid" alt="VumaInvest">
 								</a>
 							</div>
 							<!-- ftAddress -->
@@ -714,7 +693,7 @@
 				<div class="container">
 					<!-- pfHolder -->
 					<div class="pfHolder pt-7 pb-5">
-						<p>Vuma Invest does not provide investment advice and individual investors should make their own decisions or seek independent advice. The value of investments can go up as well as down and you may receive back less than your original investment. Bamboo is a technology platform, not a registered broker-dealer or investment adviser.</p>
+						<p>VumaInvest does not provide investment advice and individual investors should make their own decisions or seek independent advice. The value of investments can go up as well as down and you may receive back less than your original investment. Bamboo is a technology platform, not a registered broker-dealer or investment adviser.</p>
 
 						<p>Brokerage services are provided by the following:</p>
 
@@ -722,7 +701,7 @@
 
 						<p>Kenya account traded securities are provided by Lambeth Capital LTD, a SEC registered broker-dealer and member of the Kenya Stock Exchange. Lambeth Capital does not make any personal recommendations to buy, sell or otherwise deal in investments. Investors make their own investment decisions. The services and securities provided by Lambeth Capital may not be suitable for all customers and, if you have any doubts, you should seek advice from an independent financial adviser.</p>
 
-						<p>Vuma Invest © 2020. All Rights Reserved </p>
+						<p>VumaInvest © 2020. All Rights Reserved </p>
 					</div>
 					<div class="pfHolder">
 						
